@@ -276,6 +276,10 @@ class SnapControl {
 let snapcontrol;
 let snapstream = null;
 let hide_offline = true;
+let autoplay_done = false;
+function autoplayRequested() {
+    return document.location.hash.match(/autoplay/) !== null;
+}
 function show() {
     // Render the page
     let play_img;
@@ -290,6 +294,11 @@ function show() {
     let serverVersion = snapcontrol.server.server.snapserver.version.split('.');
     if ((serverVersion.length >= 2) && (+serverVersion[1] >= 21)) {
         content += "    <a href=\"javascript:play();\"><img src='" + play_img + "' class='play-button'></a>";
+        // Stream became ready and was not playing. If autoplay is requested, start playing.
+        if (!snapstream && !autoplay_done && autoplayRequested()) {
+            autoplay_done = true;
+            play();
+        }
     }
     content += "</div>";
     content += "<div class='content'>";
