@@ -7,7 +7,16 @@ function setCookie(key, value, exdays = -1) {
     let expires = "expires=" + d.toUTCString();
     document.cookie = key + "=" + value + ";" + expires + ";sameSite=Strict;path=/";
 }
-function getCookie(key, defaultValue = "") {
+function getPersistentValue(key, defaultValue = "") {
+    if (!!window.localStorage) {
+        const value = window.localStorage.getItem(key);
+        if (value !== null) {
+            return value;
+        }
+        window.localStorage.setItem(key, defaultValue);
+        return defaultValue;
+    }
+    // Fallback to cookies if localStorage is not available.
     let name = key + "=";
     let decodedCookie = decodeURIComponent(document.cookie);
     let ca = decodedCookie.split(';');
@@ -19,6 +28,10 @@ function getCookie(key, defaultValue = "") {
     }
     setCookie(key, defaultValue);
     return defaultValue;
+}
+function getChromeVersion() {
+    const raw = navigator.userAgent.match(/Chrom(e|ium)\/([0-9]+)\./);
+    return raw ? parseInt(raw[2]) : null;
 }
 function uuidv4() {
     return 'xxxxxxxx-xxxx-4xxx-yxxx-xxxxxxxxxxxx'.replace(/[xy]/g, function (c) {
@@ -452,8 +465,6 @@ class TimeProvider {
         if (ctx) {
             this.setAudioContext(ctx);
         }
-        let userAgent = navigator.userAgent.toLowerCase();
-        this.isFirefoxMobile = (userAgent.indexOf('firefox') > -1) && (userAgent.indexOf('android') > -1);
     }
     setAudioContext(ctx) {
         this.ctx = ctx;
@@ -482,12 +493,9 @@ class TimeProvider {
             return window.performance.now();
         }
         else {
-            if (this.isFirefoxMobile) {
-                return this.ctx.currentTime * 1000;
-            }
-            else {
-                return (this.ctx.getOutputTimestamp().contextTime || this.ctx.currentTime) * 1000;
-            }
+            // Use the more accurate getOutputTimestamp if available, fallback to ctx.currentTime otherwise.
+            const contextTime = !!this.ctx.getOutputTimestamp ? this.ctx.getOutputTimestamp().contextTime : undefined;
+            return (contextTime !== undefined ? contextTime : this.ctx.currentTime) * 1000;
         }
     }
     nowSec() {
@@ -727,7 +735,13 @@ class SnapStream {
                             this.bufferFrameCount = Math.floor(this.bufferDurationMs * this.sampleFormat.msRate());
                         }
                         this.stopAudio();
-                        this.ctx = new AudioContext({ latencyHint: "playback", sampleRate: this.sampleFormat.rate });
+                        let options = { latencyHint: "playback", sampleRate: this.sampleFormat.rate };
+                        const chromeVersion = getChromeVersion();
+                        if (chromeVersion !== null && chromeVersion < 55) {
+                            // Some older browsers won't decode the stream if options are provided.
+                            options = undefined;
+                        }
+                        this.ctx = new AudioContext(options);
                         this.timeProvider.setAudioContext(this.ctx);
                         this.gainNode = this.ctx.createGain();
                         this.gainNode.connect(this.ctx.destination);
@@ -774,7 +788,7 @@ class SnapStream {
             hello.arch = "web";
             hello.os = navigator.platform;
             hello.hostname = "Snapweb client";
-            hello.uniqueId = getCookie("uniqueId", uuidv4());
+            hello.uniqueId = getPersistentValue("uniqueId", uuidv4());
             this.sendMessage(hello);
             this.syncTime();
             this.syncHandle = window.setInterval(() => this.syncTime(), 1000);
