@@ -10,6 +10,7 @@ snapcast (0.22.0-1) unstable; urgency=medium
     -Less verbose logging during pipe reconnects (Issue #696)
     -Add null encoder for streams used only as input for meta streams
     -Snapweb: Change latency range to [-10s, 10s] (Issue #695)
+    -Update Snapweb, including PR #11, #12, #13
 
  -- Johannes Pohl <snapcast@badaix.de>  Sun, 11 Oct 2020 00:13:37 +0200
 
